<?xml version="1.0"?>
<package format="2">
  <name>px4_gcs_rqt</name>
  <version>0.0.0</version>
  <description>The px4_gcs_rqt package</description>

  <maintainer email="dongjae713@gmail.com">Dongjae Lee</maintainer>
  <author email="dongjae713@gmail.com">Dongjae Lee</author>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_cpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>mavros_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rqt_gui</build_export_depend>
  <build_export_depend>rqt_gui_cpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>mavros_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_cpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
